--- a/ui/components/vms-tab/vms-tab.html
+++ b/ui/components/vms-tab/vms-tab.html
@@ -8,8 +8,8 @@
 
   <template>
     <create-vm on-vm-created="_vmCreated"></create-vm>
-    <vm-list id="list_alive" frag="{{frag}}" expanded></vm-list>
-    <vm-list frag="{{frag}}" destroyed></vm-list>
+    <vm-list id="list_alive" expanded></vm-list>
+    <vm-list destroyed></vm-list>
   </template>
 </dom-module>
 
